--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form method="POST">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-    <a href="{{ url_for('register') }}">Don't have an account? Register</a>
+
+<div class="container mt-4">
+    <div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="mt-4">Login to Task Manager</h2>
+        <form action="{{ url_for('login') }}" method="post">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.email.label(class="form-label") }}
+                {{ form.email(class="form-control") }}
+            </div>
+            <div class="form-group">
+                {{ form.password.label(class="form-label") }}
+                {{ form.password(class="form-control") }}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+        <div class="mt-3 text-center">
+            <a href="{{ url_for('register') }}">Register if you are new</a>
+        </div>
+    </div>
+    </div>
+</div>
+
 </body>
 </html>
